--- a/athens.html
+++ b/athens.html
@@ -527,7 +527,9 @@
               <!-- 01 -->
               <div class="listing">
                 <a href="#" target="_blank">
+                    <div class="read-more-main">
                     <div class="read-more-img" style="background-image: url(assets/images/roftop-bar-hotel-img.jpg);"></div>
+                </div>
                   <h3>Τα Καλύτερα Rooftop Bars με Θέα στην Ακρόπολη</h3>
                 </a>
               </div>
@@ -535,7 +537,9 @@
               <!-- 02 -->
               <div class="listing">
                 <a href="#" target="_blank">
+                    <div class="read-more-main">
                     <div class="read-more-img" style="background-image: url(assets/images/roftop-img2.jpg);"></div>
+                </div>
                   <h3>Αθήνα σε 48 Ώρες: Πού να Μείνετε και Τι να Δείτε</h3>
                 </a>
               </div>
@@ -543,7 +547,9 @@
               <!-- 03 -->
               <div class="listing">
                 <a href="#" target="_blank">
+                    <div class="read-more-main">
                     <div class="read-more-img" style="background-image: url(assets/images/roftop-img3.jpg);"></div>
+                </div>
                   <h3>Κρυφά Boutique Ξενοδοχεία Κοντά στην Ακρόπολη</h3>
                 </a>
               </div>
@@ -649,7 +655,7 @@
     <!-- footer sec end -->
 
     <script src="assets/js/main.js"></script>
-    
+
 </body>
 
 </html>
