--- a/index.html
+++ b/index.html
@@ -244,14 +244,16 @@
       <section class="read-more pt-80 mb-80">
         <div class="container">
             <div class="read-more-heading">
-        <h2>✨ Διαβάστε Περισσότερα στο Zeuzie</h2>
+        <h2> Διαβάστε Περισσότερα στο Zeuzie</h2>
     </div>
         <div class="zeuzie-listings">
       
           <!-- 01 -->
           <div class="listing">
             <a href="#" target="_blank">
+                <div class="read-more-main">
                 <div class="read-more-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+            </div>
               <h3>Ανακαλύψτε Πολυτελείς Βίλες στην Ελλάδα</h3>
             </a>
           </div>
@@ -259,7 +261,9 @@
           <!-- 02 -->
           <div class="listing">
             <a href="#" target="_blank">
+                <div class="read-more-main">
                 <div class="read-more-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+            </div>
               <h3>Βρείτε Προορισμούς για Πάρτι στην Αθήνα</h3>
             </a>
           </div>
@@ -267,7 +271,9 @@
           <!-- 03 -->
           <div class="listing">
             <a href="#" target="_blank">
+                <div class="read-more-main">
                 <div class="read-more-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+            </div>
               <h3>Θέρετρα Γκολφ στα Ελληνικά Νησιά</h3>
             </a>
           </div>
