--- a/patras.html
+++ b/patras.html
@@ -507,7 +507,9 @@
               <!-- 01 -->
               <div class="listing">
                 <a href="#" target="_blank">
+                <div class="read-more-main">
                     <div class="read-more-img" style="background-image: url(assets/images/parking-hotel.jpg);"></div>
+                </div>
                   <h3>Τα Καλύτερα Ξενοδοχεία με Parking για Οδικά Ταξίδια</h3>
                 </a>
               </div>
@@ -515,7 +517,9 @@
               <!-- 02 -->
               <div class="listing">
                 <a href="#" target="_blank">
+                    <div class="read-more-main">
                     <div class="read-more-img" style="background-image: url(assets/images/hotel-san-zulian.jpg);"></div>
+                </div>
                   <h3>Πού να Μείνετε Πριν το Πλοίο για Ιταλία</h3>
                 </a>
               </div>
@@ -523,7 +527,9 @@
               <!-- 03 -->
               <div class="listing">
                 <a href="#" target="_blank">
+                    <div class="read-more-main">
                     <div class="read-more-img" style="background-image: url(assets/images/charming-hotel.jpg);"></div>
+                </div>
                   <h3>Η Παλιά Πόλη της Πάτρας: Boutique Ξενοδοχεία που Ξεχωρίζουν</h3>
                 </a>
               </div>
