--- a/thessaloniki.html
+++ b/thessaloniki.html
@@ -512,7 +512,9 @@
           <!-- 01 -->
           <div class="listing">
             <a href="#" target="_blank">
+                <div class="read-more-main">
                 <div class="read-more-img" style="background-image: url(assets/images/read-more1.jpg);"></div>
+            </div>
               <h3>Τα Καλύτερα Rooftop Bars και Lounge Ξενοδοχείων στη Θεσσαλονίκη</h3>
             </a>
           </div>
@@ -520,7 +522,9 @@
           <!-- 02 -->
           <div class="listing">
             <a href="#" target="_blank">
+                <div class="read-more-main">
                 <div class="read-more-img" style="background-image: url(assets/images/read-more2.jpg);"></div>
+            </div>
               <h3>Πού να Μείνετε για ένα Ρομαντικό Σαββατοκύριακο στην Πόλη</h3>
             </a>
           </div>
@@ -528,7 +532,9 @@
           <!-- 03 -->
           <div class="listing">
             <a href="#" target="_blank">
+                <div class="read-more-main">
                 <div class="read-more-img" style="background-image: url(assets/images/read-more3.jpg);"></div>
+            </div>
               <h3>Η Θεσσαλονίκη για Καλοφαγάδες: Ξενοδοχεία Κοντά σε Αυθεντικές Ταβέρνες</h3>
             </a>
           </div>
