--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section class="people-say pt-80">
         <div class="container">
             <div class="people-say-inner">
-                <div class="people-say-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                <div class="people-say-img" style="background-image: url(assets/images/inns-in-athens-thessaloniki-and-patras.jpg);"></div>
                 <div class="people-say-text">
                     <h4>
                         Ξενοδοχεία στην Αθήνα
@@ -123,7 +123,7 @@
     <section class="people-say pt-80">
         <div class="container">
             <div class="people-say-inner">
-                <div class="people-say-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                <div class="people-say-img" style="background-image: url(assets/images/inns-in-athens1.jpg);"></div>
                 <div class="people-say-text-second">
                     <h4>
                         Ξενοδοχεία στη Θεσσαλονίκη
@@ -148,7 +148,7 @@
     <section class="people-say pt-80">
         <div class="container">
             <div class="people-say-inner">
-                <div class="people-say-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                <div class="people-say-img" style="background-image: url(assets/images/inn-in-thessaloniki.jpg);"></div>
                 <div class="people-say-text">
                     <h4>
                         Ξενοδοχεία στην Πάτρα
@@ -252,7 +252,7 @@
           <div class="listing">
             <a href="#" target="_blank">
                 <div class="read-more-main">
-                <div class="read-more-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                <div class="read-more-img" style="background-image: url(assets/images/discover-luxury-villas-in-greece.jpg);"></div>
             </div>
               <h3>Ανακαλύψτε Πολυτελείς Βίλες στην Ελλάδα</h3>
             </a>
@@ -262,7 +262,7 @@
           <div class="listing">
             <a href="#" target="_blank">
                 <div class="read-more-main">
-                <div class="read-more-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                <div class="read-more-img" style="background-image: url(assets/images/party-destinations-in-athens.webp);"></div>
             </div>
               <h3>Βρείτε Προορισμούς για Πάρτι στην Αθήνα</h3>
             </a>
@@ -272,7 +272,7 @@
           <div class="listing">
             <a href="#" target="_blank">
                 <div class="read-more-main">
-                <div class="read-more-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                <div class="read-more-img" style="background-image: url(assets/images/golf-resorts-in-the-greek-Islands.webp);"></div>
             </div>
               <h3>Θέρετρα Γκολφ στα Ελληνικά Νησιά</h3>
             </a>
