--- a/athens.html
+++ b/athens.html
@@ -47,7 +47,7 @@
     <!--  Header Section end-->
 
     <!-- Banner Section Start -->
-    <div class="high-stakes-banner" style="background:url(assets/images/home-banner.jpg);">
+    <div class="high-stakes-banner" style="background:url(assets/images/athenes-banner-main.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="after-banner-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                    <div class="after-banner-img" style="background-image: url(assets/images/athens-after-banner.webp);"></div>
                 </div>
                 <div class="col-md-6">
                     <div class="after-banner-text">
@@ -102,7 +102,7 @@
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel1.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="top-hotel-main">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel2.jpg);"></div>
                     </a>
                 </div>
             </div>
@@ -158,7 +158,7 @@
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel3.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
@@ -201,7 +201,7 @@
                 </div>
                 <div class="top-hotel-main">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel4.jpg);"></div>
                     </a>
                 </div>
             </div>
@@ -214,7 +214,7 @@
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=2090399">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel5.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
@@ -256,7 +256,7 @@
                 </div>
                 <div class="top-hotel-main">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel6.jpg);"></div>
                     </a>
                 </div>
             </div>
@@ -269,7 +269,7 @@
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=8099318">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel7.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
@@ -313,7 +313,7 @@
                 </div>
                 <div class="top-hotel-main">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187">
-                        <div class="top-hotel-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                        <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel8.jpg);"></div>
                     </a>
                 </div>
             </div>
