--- a/athens-blogpost.html
+++ b/athens-blogpost.html
@@ -117,7 +117,7 @@
                                 </p>
                             </div>
                             <div class="text-close">
-                                <button class="close-text-button subpage-readmore-btn main-btn">Read More
+                                <button class="close-text-button subpage-readmore-btn main-btn">Διαβάστε περισσότερα
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                                         <path
                                             d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
@@ -180,7 +180,7 @@
                                 </p>
                             </div>
                             <div class="text-close">
-                                <button class="close-text-button subpage-readmore-btn main-btn">Read More
+                                <button class="close-text-button subpage-readmore-btn main-btn">Διαβάστε περισσότερα
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                                         <path
                                             d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
@@ -234,7 +234,7 @@
                                     — χωρίς τη μαζικότητα των αλυσίδων.</p>
                             </div>
                             <div class="text-close">
-                                <button class="close-text-button subpage-readmore-btn main-btn">Read More
+                                <button class="close-text-button subpage-readmore-btn main-btn">Διαβάστε περισσότερα
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                                         <path
                                             d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
@@ -330,7 +330,7 @@
                 <div class="footer_btm">
                     <div class="footer_btmWrapp">
                         <div class="copyright">
-                            <p> Copyright © 2025
+                            <p> Copyright © 2025.zeuzie.com
                                 All rights Reserved</p>
                         </div>
                         <div class="ssl">
